--- a/index.html
+++ b/index.html
@@ -599,7 +599,7 @@
                             <a target="_blank" rel="noopener noreferrer" href="https://www.sketch.com/"><img src="img/sponsors-img/sketch-logo-light-transparent@2x.png" alt=""></a>
                         </div>
                         <div class="single-sponsor wow fadeInUp" data-wow-delay="300ms">
-                            <a target="_blank" rel="noopener noreferrer" href="https://restdb.io/"><img src="img/sponsors-img/restdb-logo-whitepng.png" alt=""></a>
+                            <a target="_blank" rel="noopener noreferrer" href="https://restdb.io/"><img style="padding-bottom: 10%;" src="img/sponsors-img/restdb-logo-white.png" alt=""></a>
                         </div>
                     </div>
                     <div id="desktop">
