alt tags added for all images

--- a/index.html
+++ b/index.html
@@ -557,49 +557,49 @@
                 <div class="col-12">
                     <div style="display:flex;justify-content: center;" class="our-sponsor-area d-flex flex-wrap">
                         <div class="single-sponsor wow fadeInUp" data-wow-delay="300ms">
-                            <a target="_blank" rel="noopener noreferrer" href="https://devfolio.co/"><img src="img/sponsors-img/devfolio.png" alt=""></a>
+                            <a target="_blank" rel="noopener noreferrer" href="https://devfolio.co/"><img src="img/sponsors-img/devfolio.png" alt="Devfolio"></a>
                         </div>
                         <div class="single-sponsor wow fadeInUp" data-wow-delay="300ms">
-                            <a target="_blank" rel="noopener noreferrer" href="https://matic.network"><img src="img/sponsors-img/matic.png" alt=""></a>
+                            <a target="_blank" rel="noopener noreferrer" href="https://matic.network"><img src="img/sponsors-img/matic.png" alt="Matic"></a>
                         </div>
                         <div class="single-sponsor wow fadeInUp" data-wow-delay="300ms">
-                            <a target="_blank" rel="noopener noreferrer" href="https://www.codechef.com/"><img src="img/sponsors-img/codechef.png" alt=""></a>
+                            <a target="_blank" rel="noopener noreferrer" href="https://www.codechef.com/"><img src="img/sponsors-img/codechef.png" alt="Codechef"></a>
                         </div> 
                         <div class="single-sponsor wow fadeInUp" data-wow-delay="300ms">
-                            <a target="_blank" rel="noopener noreferrer" href="https://zulipchat.com/"><img style="width: auto;" src="img/sponsors-img/zulip.png" alt=""></a>
+                            <a target="_blank" rel="noopener noreferrer" href="https://zulipchat.com/"><img style="width: auto;" src="img/sponsors-img/zulip.png" alt="Zulip"></a>
                         </div> 
                         <div class="single-sponsor wow fadeInUp" data-wow-delay="300ms">
-                            <a target="_blank" rel="noopener noreferrer" href="https://www.elastic.co/"><img src="img/sponsors-img/logo-elastic.svg" alt=""></a>
+                            <a target="_blank" rel="noopener noreferrer" href="https://www.elastic.co/"><img src="img/sponsors-img/logo-elastic.svg" alt="Elastic"></a>
                         </div>
                         <div class="single-sponsor wow fadeInUp" data-wow-delay="300ms">
-                            <a target="_blank" rel="noopener noreferrer" href="https://www.creative-tim.com/"><img src="img/sponsors-img/tim-horizontal-logo-transparent-bg.png" alt=""></a>
+                            <a target="_blank" rel="noopener noreferrer" href="https://www.creative-tim.com/"><img src="img/sponsors-img/tim-horizontal-logo-transparent-bg.png" alt="Creative Tim"></a>
                         </div>
                         <div class="single-sponsor wow fadeInUp" data-wow-delay="300ms">
-                            <a target="_blank" rel="noopener noreferrer" href="https://cloudsploit.com/"><img src="img/sponsors-img/cloudsploit.png" alt=""></a>
+                            <a target="_blank" rel="noopener noreferrer" href="https://cloudsploit.com/"><img src="img/sponsors-img/cloudsploit.png" alt="CloudSploit"></a>
                         </div>
                         <div class="single-sponsor wow fadeInUp" data-wow-delay="300ms">
-                            <a target="_blank" rel="noopener noreferrer" href="https://www.stickermule.com/"><img src="img/sponsors-img/sticker-mule-logo-light.png" alt=""></a>
+                            <a target="_blank" rel="noopener noreferrer" href="https://www.stickermule.com/"><img src="img/sponsors-img/sticker-mule-logo-light.png" alt="StickerMule"></a>
                         </div>
                         <div class="single-sponsor wow fadeInUp" data-wow-delay="300ms">
-                            <a target="_blank" rel="noopener noreferrer" href="https://www.bugsee.com/"><img src="img/sponsors-img/bugsee.png" alt=""></a>
+                            <a target="_blank" rel="noopener noreferrer" href="https://www.bugsee.com/"><img src="img/sponsors-img/bugsee.png" alt="Bugsee"></a>
                         </div>
                         <div class="single-sponsor wow fadeInUp" data-wow-delay="300ms">
-                            <a target="_blank" rel="noopener noreferrer" href="https://www.wolfram.com/language/"><img src="img/sponsors-img/wolfram.png" alt=""></a>
+                            <a target="_blank" rel="noopener noreferrer" href="https://www.wolfram.com/language/"><img src="img/sponsors-img/wolfram.png" alt="Wolfram Language"></a>
                         </div>
                         <div class="single-sponsor wow fadeInUp" data-wow-delay="300ms">
-                            <a target="_blank" rel="noopener noreferrer" href="https://www.gatsbyjs.org/"><img src="img/sponsors-img/Gatsby-Logo.svg" alt=""></a>
+                            <a target="_blank" rel="noopener noreferrer" href="https://www.gatsbyjs.org/"><img src="img/sponsors-img/Gatsby-Logo.svg" alt="Gatsby"></a>
                         </div>
                         <div class="single-sponsor wow fadeInUp" data-wow-delay="300ms">
-                            <a target="_blank" rel="noopener noreferrer" href="https://balsamiq.com/"><img src="img/sponsors-img/balsamiq-logo-screen.png" alt=""></a>
+                            <a target="_blank" rel="noopener noreferrer" href="https://balsamiq.com/"><img src="img/sponsors-img/balsamiq-logo-screen.png" alt="Balsamiq"></a>
                         </div>
                         <div class="single-sponsor wow fadeInUp" data-wow-delay="300ms">
-                            <a target="_blank" rel="noopener noreferrer" href="https://codingblocks.com/"><img src="img/sponsors-img/Logo_DarkGrey_ NoShadow.png" alt=""></a>
+                            <a target="_blank" rel="noopener noreferrer" href="https://codingblocks.com/"><img src="img/sponsors-img/Logo_DarkGrey_ NoShadow.png" alt="Coding Blocks"></a>
                         </div>
                         <div class="single-sponsor wow fadeInUp" data-wow-delay="300ms">
-                            <a target="_blank" rel="noopener noreferrer" href="https://www.sketch.com/"><img src="img/sponsors-img/sketch-logo-light-transparent@2x.png" alt=""></a>
+                            <a target="_blank" rel="noopener noreferrer" href="https://www.sketch.com/"><img src="img/sponsors-img/sketch-logo-light-transparent@2x.png" alt="Sketch"></a>
                         </div>
                         <div class="single-sponsor wow fadeInUp" data-wow-delay="300ms">
-                            <a target="_blank" rel="noopener noreferrer" href="https://restdb.io/"><img style="padding-bottom: 10%;" src="img/sponsors-img/restdb-logo-white.png" alt=""></a>
+                            <a target="_blank" rel="noopener noreferrer" href="https://restdb.io/"><img style="padding-bottom: 10%;" src="img/sponsors-img/restdb-logo-white.png" alt="restdb.io"></a>
                         </div>
                     </div>
                     <div id="desktop">
