--- a/index.html
+++ b/index.html
@@ -311,7 +311,29 @@
                     <!-- About Thumb -->
                     <div class="col-6 col-md-6 order-1 order-lg-2">
                         <div class="about-thumb mb-80 wow fadeInUp" data-wow-delay="300ms">
-                            <img src="img/nitk.png" alt="">
+                            <img src="img/nitk.png" alt="NITK, Surathkal">
+                        </div>
+                    </div>
+            </div>
+
+            <div class="row align-items-center">
+                    <!-- About Content -->
+                    <div class="col-12 col-md-6 order-2 order-lg-1">
+                        <div class="about-content-text mb-80">
+                            <!-- <h6 class="wow fadeInUp" data-wow-delay="300ms">About</h6> -->
+                            <h3 class="wow fadeInUp" data-wow-delay="300ms">Innovation Partner</h3>
+                            <p class="wow fadeInUp" data-wow-delay="300ms">
+                             Ministry of Human Resource Development (MHRD), Govt. of India has established ‘MHRD’s Innovation Cell (MIC)’ to systematically foster the culture of Innovation amongst all Higher Education Institutions (HEIs). The primary mandate of MIC is to encourage, inspire and nurture young students by supporting them to work with new ideas and transform them into prototypes while they are informative years.
+                            
+                            HackVerse with this hackathon aims to fulfill the same vision of MHRD's Innovation Cell.</p>
+                            <!-- <a href="#" class="btn confer-btn mt-50 wow fadeInUp" data-wow-delay="300ms">Interested <i class="zmdi zmdi-long-arrow-right"></i></a> -->
+                        </div>
+                    </div>
+    
+                    <!-- About Thumb -->
+                    <div class="col-6 col-md-6 order-1 order-lg-2">
+                        <div class="about-thumb mb-80 wow fadeInUp" data-wow-delay="300ms">
+                            <img src="img/mhrd-iic.jpg" alt="Institution’s Innovation Council">
                         </div>
                     </div>
             </div>
@@ -835,7 +857,7 @@
                     <div class="col-12 col-sm-6 col-lg-3">
                         <div class="single-footer-widget mb-60 wow fadeInUp" data-wow-delay="300ms">
                             <!-- Footer Logo -->
-                            <a href="#" class="footer-logo"><img style="height: auto;width: auto;max-height: 72px;max-width: 200px;" src="img/Text-Logo.png" alt=""></a>
+                            <a href="#" class="footer-logo"><img style="height: auto;width: auto;max-height: 72px;max-width: 200px;" src="img/Text-Logo.png" alt="HackVerse"></a>
                             <p>Hack it till you crack it!</p>
 
                             <!-- Social Info -->
@@ -873,22 +895,22 @@
                             <div class="footer-gallery">
                                 <div class="row">
                                     <div class="col-4">
-                                        <a href="img/nitk/01.jpg" class="single-gallery-item"><img src="img/nitk/01.jpg" alt=""></a>
+                                        <a href="img/nitk/01.jpg" class="single-gallery-item"><img src="img/nitk/01.jpg" alt="NITK, Surathkal"></a>
                                     </div>
                                     <div class="col-4">
-                                        <a href="img/nitk/02.jpg" class="single-gallery-item"><img src="img/nitk/02.jpg" alt=""></a>
+                                        <a href="img/nitk/02.jpg" class="single-gallery-item"><img src="img/nitk/02.jpg" alt="NITK, Surathkal"></a>
                                     </div>
                                     <div class="col-4">
-                                        <a href="img/nitk/03.jpg" class="single-gallery-item"><img src="img/nitk/03.jpg" alt=""></a>
+                                        <a href="img/nitk/03.jpg" class="single-gallery-item"><img src="img/nitk/03.jpg" alt="NITK, Surathkal"></a>
                                     </div>
                                     <div class="col-4">
-                                        <a href="img/nitk/04.jpg" class="single-gallery-item"><img src="img/nitk/04.jpg" alt=""></a>
+                                        <a href="img/nitk/04.jpg" class="single-gallery-item"><img src="img/nitk/04.jpg" alt="NITK, Surathkal"></a>
                                     </div>
                                     <div class="col-4">
-                                        <a href="img/nitk/05.jpg" class="single-gallery-item"><img src="img/nitk/05.jpg" alt=""></a>
+                                        <a href="img/nitk/05.jpg" class="single-gallery-item"><img src="img/nitk/05.jpg" alt="NITK, Surathkal"></a>
                                     </div>
                                     <div class="col-4">
-                                        <a href="img/nitk/06.jpg" class="single-gallery-item"><img src="img/nitk/06.jpg" alt=""></a>
+                                        <a href="img/nitk/06.jpg" class="single-gallery-item"><img src="img/nitk/06.jpg" alt="NITK, Surathkal"></a>
                                     </div>
                                 </div>
                             </div>
