progate added as sponsor

--- a/index.html
+++ b/index.html
@@ -111,6 +111,7 @@
                                     <ul class="dropdown">
                                         <li><a target="_blank" rel="noopener noreferrer" href="//dj.nitk.ac.in/">NITK  💎 Jubilee</a></li>
                                         <li><a target="_blank" rel="noopener noreferrer" href="//www.nitk.ac.in/">NITK, Surathkal</a></li>
+                                        <li><a target="_blank" rel="noopener noreferrer" href="/blog/">HackVerse Blog</a></li>
                                         <!-- <li><a target="_blank" rel="noopener noreferrer" href="http://ie.nitk.ac.in/">IE NITK</a></li> -->
                                         <!-- <li><a target="_blank" rel="noopener noreferrer" href="#">Our Team </a></li>                                         -->
 
@@ -622,6 +623,9 @@
                         </div>
                         <div class="single-sponsor wow fadeInUp" data-wow-delay="300ms">
                             <a target="_blank" rel="noopener noreferrer" href="https://restdb.io/"><img style="padding-bottom: 10%;" src="img/sponsors-img/restdb-logo-white.png" alt="restdb.io"></a>
+                        </div>
+                        <div class="single-sponsor wow fadeInUp" data-wow-delay="300ms">
+                            <a target="_blank" rel="noopener noreferrer" href="https://progate.com/"><img style="padding-bottom: 10%;" src="img/sponsors-img/progate.png" alt="Progate"></a>
                         </div>
                     </div>
                     <div id="desktop">
