Setup for tracks

--- a/index.html
+++ b/index.html
@@ -564,7 +564,48 @@
     </section>
     
     <!-- Our Schedule Area End -->
-     
+    <!-- <section class="what-we-offer-area section-padding-100-70">
+        <div class="container">
+            <div class="row">
+                <div class="col-12">
+                    <div class="section-heading-3 text-center wow fadeInUp" data-wow-delay="300ms">
+                        <h4>Tracks We Offer</h4>
+                    </div>
+                </div>
+            </div>
+
+            <div class="row">
+
+                <div class="col-12 col-md-6 col-xl-3">
+                    <div class="single-we-offer-content text-center wow fadeInUp" data-wow-delay="0.3s">
+                        <div class="offer-icon">
+                            <img src="img/core-img/icon.png" alt="">
+                        </div>
+                        <h5>AI</h5>
+                    </div>
+                </div>
+
+                <div class="col-12 col-md-6 col-xl-3">
+                    <div class="single-we-offer-content text-center wow fadeInUp" data-wow-delay="0.3s">
+                        <div class="offer-icon">
+                            <img src="img/core-img/icon-2.png" alt="">
+                        </div>
+                        <h5>Blockchain</h5>
+                    </div>
+                </div>
+
+                <div class="col-12 col-md-6 col-xl-3">
+                    <div class="single-we-offer-content text-center wow fadeInUp" data-wow-delay="0.3s">
+                        <div class="offer-icon">
+                            <img src="img/core-img/icon-3.png" alt="">
+                        </div>
+                        <h5>AR - VR </h5>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>  -->
+
     <section id="sponsors" style="background-color: white" class="our-sponsor-client-area section-padding-100">
         <div class="container">
             <div class="row">
