--- a/index.html
+++ b/index.html
@@ -627,6 +627,9 @@
                         <div class="single-sponsor wow fadeInUp" data-wow-delay="300ms">
                             <a target="_blank" rel="noopener noreferrer" href="https://progate.com/"><img style="padding-bottom: 10%;" src="img/sponsors-img/progate.png" alt="Progate"></a>
                         </div>
+                        <div class="single-sponsor wow fadeInUp" data-wow-delay="300ms">
+                            <a target="_blank" rel="noopener noreferrer" href=""><img style="padding-bottom: 10%;" src="img/sponsors-img/av8.png" alt="AV8 Juice"></a>
+                        </div>
                     </div>
                     <div id="desktop">
                         <p style="display:flex;justify-content: center;">Interested in sponsoring HackVerse? Shoot us an email at <a style="color:#9293bc; font-weight: normal; text-indent: 0.2em;" href="mailto:hackverse@nitk.edu.in" target="_blank">hackverse@nitk.edu.in</a></p>
