--- a/index.html
+++ b/index.html
@@ -581,25 +581,66 @@
                         <div class="offer-icon">
                             <img src="img/core-img/icon.png" alt="">
                         </div>
-                        <h5>AI</h5>
+                        <h5>Blockchain</h5>
+                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Pellentesque et tellus varius, fringilla nisl eget, maximus tellus. In dignissim ipsum ligula, sit amet tincidunt tellus facilisis quis.</p>
                     </div>
                 </div>
-
                 <div class="col-12 col-md-6 col-xl-3">
                     <div class="single-we-offer-content text-center wow fadeInUp" data-wow-delay="0.3s">
                         <div class="offer-icon">
-                            <img src="img/core-img/icon-2.png" alt="">
+                            <img src="img/core-img/icon.png" alt="">
                         </div>
-                        <h5>Blockchain</h5>
+                        <h5>AI - ML</h5>
+                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Pellentesque et tellus varius, fringilla nisl eget, maximus tellus. In dignissim ipsum ligula, sit amet tincidunt tellus facilisis quis.</p>
                     </div>
                 </div>
+                <div class="col-12 col-md-6 col-xl-3">
+                    <div class="single-we-offer-content text-center wow fadeInUp" data-wow-delay="0.3s">
+                        <div class="offer-icon">
+                            <img src="img/core-img/icon.png" alt="">
+                        </div>
+                        <h5>Algorithms</h5>
+                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Pellentesque et tellus varius, fringilla nisl eget, maximus tellus. In dignissim ipsum ligula, sit amet tincidunt tellus facilisis quis.</p>
+                    </div>
+                </div>
+                <div class="col-12 col-md-6 col-xl-3">
+                    <div class="single-we-offer-content text-center wow fadeInUp" data-wow-delay="0.3s">
+                        <div class="offer-icon">
+                            <img src="img/core-img/icon.png" alt="">
+                        </div>
+                        <h5>FinTech</h5>
+                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Pellentesque et tellus varius, fringilla nisl eget, maximus tellus. In dignissim ipsum ligula, sit amet tincidunt tellus facilisis quis.</p>
 
+                    </div>
+                </div>
+                <div class="col-12 col-md-6 col-xl-3">
+                    <div class="single-we-offer-content text-center wow fadeInUp" data-wow-delay="0.3s">
+                        <div class="offer-icon">
+                            <img src="img/core-img/icon.png" alt="">
+                        </div>
+                        <h5>Future Mobility</h5>
+                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Pellentesque et tellus varius, fringilla nisl eget, maximus tellus. In dignissim ipsum ligula, sit amet tincidunt tellus facilisis quis.</p>
+
+                    </div>
+                </div>
+                <div class="col-12 col-md-6 col-xl-3">
+                    <div class="single-we-offer-content text-center wow fadeInUp" data-wow-delay="0.3s">
+                        <div class="offer-icon">
+                            <img src="img/core-img/icon.png" alt="">
+                        </div>
+                        <h5>AR - VR</h5>
+                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Pellentesque et tellus varius, fringilla nisl eget, maximus tellus. In dignissim ipsum ligula, sit amet tincidunt tellus facilisis quis.</p>
+
+                    </div>
+                </div>
                 <div class="col-12 col-md-6 col-xl-3">
                     <div class="single-we-offer-content text-center wow fadeInUp" data-wow-delay="0.3s">
                         <div class="offer-icon">
                             <img src="img/core-img/icon-3.png" alt="">
                         </div>
-                        <h5>AR - VR </h5>
+                        <h5>Miscellaneous </h5>
+                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Pellentesque et tellus varius, fringilla nisl eget, maximus tellus. In dignissim ipsum ligula, sit amet tincidunt tellus facilisis quis.</p>
+
                     </div>
                 </div>
             </div>
