Added zubi logo

--- a/index.html
+++ b/index.html
@@ -706,6 +706,9 @@
                         <div class="single-sponsor wow fadeInUp" data-wow-delay="300ms">
                             <a target="_blank" rel="noopener noreferrer" href=""><img style="padding-bottom: 10%;" src="img/sponsors-img/unnathi.png" alt="Unnathi Career Academy Pvt. Ltd."></a>
                         </div>
+                        <div class="single-sponsor wow fadeInUp" data-wow-delay="300ms">
+                            <a target="_blank" rel="noopener noreferrer" href="https://zubi.io/"><img style="width:30%;margin-left: 25%;" src="img/sponsors-img/zubi.jpeg" alt="Zubi.io"></a>
+                        </div>
                     </div>
                     <div id="desktop">
                         <p style="display:flex;justify-content: center;">Interested in sponsoring HackVerse? Shoot us an email at <a style="color:#9293bc; font-weight: normal; text-indent: 0.2em;" href="mailto:hackverse@nitk.edu.in" target="_blank">hackverse@nitk.edu.in</a></p>
