--- a/index.html
+++ b/index.html
@@ -727,7 +727,7 @@
                     <li>
                         <a data-toggle="collapse" href="#faq12" class="collapsed">Are there any problem statements for the hackathon? <i class="fa fa-minus-circle"></i></a>
                         <div id="faq12" class="collapse" data-parent="#faq2-list">
-                            <p>We believe being forced to build on problem statements limits creativity and participants should have the freedom to express their creativity. However some broad tracks are Artificial Intelligence, Blockchain, FinTech, Future Mobility, Algorithms, AR/VR.
+                            <p>We believe being forced to build on problem statements limits creativity and participants should have the freedom to express their creativity. Near the hackathon, we'll release the APIs you could build on and some sample problem statements in case needed.
                             </p>
                         </div>
                     </li>
