--- a/index.html
+++ b/index.html
@@ -311,7 +311,7 @@
         
                     <div class="row">
         
-                        <div class="col-12 col-md-6 col-xl-4">
+                        <div class="col-12 col-md-6 col-xl-3">
                             <div class="single-we-offer-content text-center wow fadeInUp" data-wow-delay="0.3s">
                                 <div style="background-image: none;background: none;" class="offer-icon">
                                     <img src="img/tracks/blockchain.png" alt="Blockchain">
@@ -319,7 +319,7 @@
                                 <h5>Blockchain</h5>
                             </div>
                         </div>
-                        <div class="col-12 col-md-6 col-xl-4">
+                        <div class="col-12 col-md-6 col-xl-3">
                             <div class="single-we-offer-content text-center wow fadeInUp" data-wow-delay="0.3s">
                                 <div style="background-image: none;background: none;" class="offer-icon">
                                     <img src="img/tracks/ai.png" alt="AI - ML">
@@ -327,7 +327,7 @@
                                 <h5>AI - ML</h5>
                             </div>
                         </div>
-                        <div class="col-12 col-md-6 col-xl-4">
+                        <div class="col-12 col-md-6 col-xl-3">
                             <div class="single-we-offer-content text-center wow fadeInUp" data-wow-delay="0.3s">
                                 <div style="background-image: none;background: none;" class="offer-icon">
                                     <img src="img/tracks/algorithm.png" alt="Algorithms">
@@ -335,7 +335,7 @@
                                 <h5>Algorithms</h5>
                             </div>
                         </div>
-                        <div class="col-12 col-md-6 col-xl-4">
+                        <div class="col-12 col-md-6 col-xl-3">
                             <div class="single-we-offer-content text-center wow fadeInUp" data-wow-delay="0.3s">
                                 <div style="background-image: none;background: none;" class="offer-icon">
                                     <img src="img/tracks/fintech.png" alt="FinTech">
@@ -343,7 +343,7 @@
                                 <h5>FinTech</h5>
                             </div>
                         </div>
-                        <div class="col-12 col-md-6 col-xl-4">
+                        <div class="col-12 col-md-6 col-xl-3">
                             <div class="single-we-offer-content text-center wow fadeInUp" data-wow-delay="0.3s">
                                 <div style="background-image: none;background: none;" class="offer-icon">
                                     <img src="img/tracks/future-mobility.png" alt="Future Mobility">
@@ -351,7 +351,7 @@
                                 <h5>Future Mobility</h5>
                             </div>
                         </div>
-                        <div class="col-12 col-md-6 col-xl-4">
+                        <div class="col-12 col-md-6 col-xl-3">
                             <div class="single-we-offer-content text-center wow fadeInUp" data-wow-delay="0.3s">
                                 <div style="background-image: none;background: none;" class="offer-icon">
                                     <img src="img/tracks/ar-vr.png" alt="AR - VR">
@@ -359,14 +359,22 @@
                                 <h5>AR - VR</h5>
                             </div>
                         </div>
-                        <!-- <div class="col-12 col-md-6 col-xl-3">
+                        <div class="col-12 col-md-6 col-xl-3">
                             <div class="single-we-offer-content text-center wow fadeInUp" data-wow-delay="0.3s">
                                 <div style="background-image: none;background: none;" class="offer-icon">
-                                    <img src="img/track-Logos/Misce.png" alt="Miscellaneous">
+                                    <img src="img/tracks/computer-vision.png" alt="Computer Vision">
                                 </div>
-                                <h5>Miscellaneous </h5>
+                                <h5>Computer Vision</h5>
                             </div>
-                        </div> -->
+                        </div>
+                        <div class="col-12 col-md-6 col-xl-3">
+                            <div class="single-we-offer-content text-center wow fadeInUp" data-wow-delay="0.3s">
+                                <div style="background-image: none;background: none;" class="offer-icon">
+                                    <img src="img/tracks/open-innovation.png" alt="Open Innovation">
+                                </div>
+                                <h5>Open Innovation</h5>
+                            </div>
+                        </div>
                     </div>
                 </div>
             </section> 
