Can't wait to uncomment this

--- a/index.html
+++ b/index.html
@@ -620,6 +620,237 @@
         </div>
     </section>
 
+    <!-- <section class="our-schedule-area section-padding-100">
+        <div class="container">
+            <div class="row">
+                <div class="col-12">
+                    <div class="section-heading-2 text-center wow fadeInUp" data-wow-delay="300ms">
+                        <p>Our Timetable</p>
+                        <h4>Schedule Plan</h4>
+                    </div>
+                </div>
+            </div>
+
+            <div class="row">
+                <div class="col-12">
+                    <div class="schedule-tab">
+                        <ul class="nav nav-tabs wow fadeInUp" data-wow-delay="300ms" id="conferScheduleTab" role="tablist">
+                            <li class="nav-item">
+                                <a class="nav-link active" id="monday-tab" data-toggle="tab" href="#step-one" role="tab" aria-controls="step-one" aria-expanded="true">Sunday <br> <span>January 26, 2020</span></a>
+                            </li>
+                            <li class="nav-item">
+                                <a class="nav-link" id="tuesday-tab" data-toggle="tab" href="#step-two" role="tab" aria-controls="step-two" aria-expanded="true">Monday <br> <span>January 27, 2020</span></a>
+                            </li>
+                        </ul>
+                    </div>
+
+                    <div class="tab-content" id="conferScheduleTabContent">
+                        <div class="tab-pane fade show active" id="step-one" role="tabpanel" aria-labelledby="monday-tab">
+                            <div class="single-tab-content">
+                                <div class="row">
+                                    <div class="col-12">
+                                        <div class="single-schedule-area d-flex flex-wrap justify-content-between align-items-center wow fadeInUp" data-wow-delay="300ms">
+                                            <div class="single-schedule-tumb-info d-flex align-items-center">
+                                                <div class="single-schedule-tumb">
+                                                    <img src="img/bg-img/10.jpg" alt="">
+                                                </div>
+                                                <div class="single-schedule-info">
+                                                    <h6>Registration</h6>
+                                                </div>
+                                            </div>
+
+                                            <div class="schedule-time-place">
+                                                <p><i class="zmdi zmdi-time"></i> 8:00 AM, January 26 </p>
+                                                <p><i class="zmdi zmdi-map"></i>Central Computer Centre, NITK</p>
+                                            </div>
+                                        </div>
+
+                                        <div class="single-schedule-area d-flex flex-wrap justify-content-between align-items-center wow fadeInUp" data-wow-delay="300ms">
+                                            <div class="single-schedule-tumb-info d-flex align-items-center">
+                                                <div class="single-schedule-tumb">
+                                                    <img src="img/bg-img/11.jpg" alt="">
+                                                </div>
+                                                <div class="single-schedule-info">
+                                                    <h6>Inauguration</h6>
+                                                </div>
+                                            </div>
+                                            <div class="schedule-time-place">
+                                                <p><i class="zmdi zmdi-time"></i> 9:00 AM, January 26</p>
+                                                <p><i class="zmdi zmdi-map"></i> Central Computer Centre, NITK</p>
+                                            </div>
+                                        </div>
+
+                                        <div class="single-schedule-area d-flex flex-wrap justify-content-between align-items-center wow fadeInUp" data-wow-delay="300ms">
+                                            <div class="single-schedule-tumb-info d-flex align-items-center">
+                                                <div class="single-schedule-tumb">
+                                                    <img src="img/bg-img/12.jpg" alt="">
+                                                </div>
+                                                <div class="single-schedule-info">
+                                                    <h6>Hackathon Begins</h6>
+                                                </div>
+                                            </div>
+                                            <div class="schedule-time-place">
+                                                <p><i class="zmdi zmdi-time"></i> 10:00 AM, January 26</p>
+                                                <p><i class="zmdi zmdi-map"></i> Central Computer Centre, NITK</p>
+                                            </div>
+                                        </div>
+
+                                        <div class="single-schedule-area d-flex flex-wrap justify-content-between align-items-center wow fadeInUp" data-wow-delay="300ms">
+                                            <div class="single-schedule-tumb-info d-flex align-items-center">
+                                                <div class="single-schedule-tumb">
+                                                    <img src="img/bg-img/13.jpg" alt="">
+                                                </div>
+                                                <div class="single-schedule-info">
+                                                    <h6>Lunch</h6>
+                                                </div>
+                                            </div>
+                                            <div class="schedule-time-place">
+                                                <p><i class="zmdi zmdi-time"></i>1:00 PM, January 26</p>
+                                                <p><i class="zmdi zmdi-map"></i> Central Computer Centre, NITK</p>
+                                            </div>
+                                        </div>
+
+                                        <div class="single-schedule-area d-flex flex-wrap justify-content-between align-items-center wow fadeInUp" data-wow-delay="300ms">
+                                            <div class="single-schedule-tumb-info d-flex align-items-center">
+                                                <div class="single-schedule-tumb">
+                                                    <img src="img/bg-img/13.jpg" alt="">
+                                                </div>
+                                                <div class="single-schedule-info">
+                                                    <h6>Phase 1 Evaluation</h6>
+                                                </div>
+                                            </div>
+                                            <div class="schedule-time-place">
+                                                <p><i class="zmdi zmdi-time"></i>4:00 PM, January 26</p>
+                                                <p><i class="zmdi zmdi-map"></i> Central Computer Centre, NITK</p>
+                                            </div>
+                                        </div>
+
+                                        <div class="single-schedule-area d-flex flex-wrap justify-content-between align-items-center wow fadeInUp" data-wow-delay="300ms">
+                                            <div class="single-schedule-tumb-info d-flex align-items-center">
+                                                <div class="single-schedule-tumb">
+                                                    <img src="img/bg-img/13.jpg" alt="">
+                                                </div>
+                                                <div class="single-schedule-info">
+                                                    <h6>Dinner</h6>
+                                                </div>
+                                            </div>
+                                            <div class="schedule-time-place">
+                                                <p><i class="zmdi zmdi-time"></i>9:00 PM, January 26</p>
+                                                <p><i class="zmdi zmdi-map"></i> Central Computer Centre, NITK</p>
+                                            </div>
+                                        </div>
+
+
+                                    </div>
+
+                                    <div class="col-12">
+                                        <div class="more-schedule-btn text-center mt-50 wow fadeInUp" data-wow-delay="300ms">
+                                            <a href="#" class="btn confer-gb-btn">Download schedule</a>
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+
+                        <div class="tab-pane fade" id="step-two" role="tabpanel" aria-labelledby="tuesday-tab">
+                            <div class="single-tab-content">
+                                <div class="row">
+                                    <div class="col-12">
+                                        <div class="single-schedule-area d-flex flex-wrap justify-content-between align-items-center wow fadeInUp" data-wow-delay="300ms">
+                                            <div class="single-schedule-tumb-info d-flex align-items-center">
+                                                <div class="single-schedule-tumb">
+                                                    <img src="img/bg-img/11.jpg" alt="">
+                                                </div>
+                                                <div class="single-schedule-info">
+                                                    <h6>Phase 2 Evaluation</h6>
+                                                </div>
+                                            </div>
+                                            <div class="schedule-time-place">
+                                                <p><i class="zmdi zmdi-time"></i> 12:00 AM, Janaury 27</p>
+                                                <p><i class="zmdi zmdi-map"></i> Central Computer Centre, NITK</p>
+                                            </div>
+                                        </div>
+
+                                        <div class="single-schedule-area d-flex flex-wrap justify-content-between align-items-center wow fadeInUp" data-wow-delay="300ms">
+                                            <div class="single-schedule-tumb-info d-flex align-items-center">
+                                                <div class="single-schedule-tumb">
+                                                    <img src="img/bg-img/12.jpg" alt="">
+                                                </div>
+                                                <div class="single-schedule-info">
+                                                    <h6>Presentation & Prize Distribution</h6>
+                                                </div>
+                                            </div>
+                                            <div class="schedule-time-place">
+                                                <p><i class="zmdi zmdi-time"></i> 10:30 AM, Janaury 27</p>
+                                                <p><i class="zmdi zmdi-map"></i>  Central Computer Centre, NITK</p>
+                                            </div>
+                                        </div>
+
+                                        
+                                    </div>
+
+                                    <div class="col-12">
+                                        <div class="more-schedule-btn text-center mt-50 wow fadeInUp" data-wow-delay="300ms">
+                                            <a href="#" class="btn confer-gb-btn">Download schedule </a>
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+
+                        <div class="tab-pane fade" id="step-three" role="tabpanel" aria-labelledby="wednesday-tab">
+                            <div class="single-tab-content">
+                                <div class="row">
+                                    <div class="col-12">
+                                        <div class="single-schedule-area d-flex flex-wrap justify-content-between align-items-center wow fadeInUp" data-wow-delay="300ms">
+                                            <div class="single-schedule-tumb-info d-flex align-items-center">
+                                                <div class="single-schedule-tumb">
+                                                    <img src="img/bg-img/10.jpg" alt="">
+                                                </div>
+                                                <div class="single-schedule-info">
+                                                    <h6>Dealing with Difficult People</h6>
+                                                    <p>by <span>Gary Armstrong</span> / Ceo of Confer</p>
+                                                </div>
+                                            </div>
+                                            <div class="schedule-time-place">
+                                                <p><i class="zmdi zmdi-time"></i> 12-14 Jan 2019</p>
+                                                <p><i class="zmdi zmdi-map"></i> Mountain Resort, Phoenix, USA</p>
+                                            </div>
+                                            <a href="#" class="btn confer-btn">View More <i class="zmdi zmdi-long-arrow-right"></i></a>
+                                        </div>
+
+                                        <div class="single-schedule-area d-flex flex-wrap justify-content-between align-items-center wow fadeInUp" data-wow-delay="300ms">
+                                            <div class="single-schedule-tumb-info d-flex align-items-center">
+                                                <div class="single-schedule-tumb">
+                                                    <img src="img/bg-img/13.jpg" alt="">
+                                                </div>
+                                                <div class="single-schedule-info">
+                                                    <h6>Street Food Convention</h6>
+                                                    <p>by <span>Jeffrey Morales</span> / Ceo of Confer</p>
+                                                </div>
+                                            </div>
+                                            <div class="schedule-time-place">
+                                                <p><i class="zmdi zmdi-time"></i> 12-14 Jan 2019</p>
+                                                <p><i class="zmdi zmdi-map"></i> Mountain Resort, Phoenix, USA</p>
+                                            </div>
+                                            <a href="#" class="btn confer-btn">View More <i class="zmdi zmdi-long-arrow-right"></i></a>
+                                        </div>
+                                    </div>
+
+                                    <div class="col-12">
+                                        <div class="more-schedule-btn text-center mt-50 wow fadeInUp" data-wow-delay="300ms">
+                                            <a href="#" class="btn confer-gb-btn">Dowload schedule (Pdf)</a>
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section> -->
+
     <section id="faq">
         <div class="container">
             <div class="section-header">
