add social media for gBusiness

--- a/index.html
+++ b/index.html
@@ -39,6 +39,7 @@
             "name": "HackVerse",
             "email": "hackverse@nitk.edu.in"
             "url": "https://hackverse.nitk.ac.in",
+            "sameAs": ["https://www.facebook.com/hackverse", "https://twitter.com/hackversenitk", "https://www.linkedin.com/company/hackverse", "https://www.instagram.com/hackversenitk"]
             "description": "HackVerse - 24 Hour Nation-Wide Hackathon at NITK, Surathkal as a part of the Diamond Jubilee Celebrations",
             "startDate": "25/01/2020 08:00AM",
             "endDate": "26/01/2020 09:00PM",
