--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
             "@context": "https://hackverse.nitk.ac.in",
             "@type": "Event",
             "name": "HackVerse",
-            "email": "hackverse@nitk.edu.in"
+            "email": "hackverse@nitk.edu.in",
             "url": "https://hackverse.nitk.ac.in",
             "sameAs": ["https://www.facebook.com/hackverse", "https://twitter.com/hackversenitk", "https://www.linkedin.com/company/hackverse", "https://www.instagram.com/hackversenitk"]
             "description": "HackVerse - 24 Hour Nation-Wide Hackathon at NITK, Surathkal as a part of the Diamond Jubilee Celebrations",
