--- a/index.html
+++ b/index.html
@@ -34,10 +34,11 @@
     
     <script type="application/ld+json">
         {
-            "@context": "https://hackverse.nitk.ac.in",
+            "@context": "http://schema.org",
             "@type": "Event",
             "name": "HackVerse",
             "email": "hackverse@nitk.edu.in",
+            "image": "https://raw.githubusercontent.com/HackVerse/hackverse.github.io/master/img/LOGO.png",
             "url": "https://hackverse.nitk.ac.in",
             "sameAs": ["https://www.facebook.com/hackverse", "https://twitter.com/hackversenitk", "https://www.linkedin.com/company/hackverse", "https://www.instagram.com/hackversenitk"],
             "description": "HackVerse - 24 Hour Nation-Wide Hackathon at NITK, Surathkal as a part of the Diamond Jubilee Celebrations",
@@ -54,7 +55,7 @@
                   "postalCode": "575025",
                   "addressCountry": "IND"
                 }
-            },
+            }
         }
     </script>
 </head>
