Added DEV in sponsors list

--- a/index.html
+++ b/index.html
@@ -588,6 +588,9 @@
                         <div class="single-sponsor wow fadeInUp" data-wow-delay="300ms">
                             <a target="_blank" rel="noopener noreferrer" href="https://rosenfeldmedia.com/"><img src="img/sponsors-img/rosenfeld.png" alt="Zubi.io"></a>
                         </div>
+                        <div class="single-sponsor wow fadeInUp" data-wow-delay="300ms">
+                            <a target="_blank" rel="noopener noreferrer" href="https://dev.to/"><img src="img/sponsors-img/dev.png" alt="DEV"></a>
+                        </div>
                     </div>
                     <div id="desktop">
                         <p style="display:flex;justify-content: center;">Interested in sponsoring HackVerse? Shoot us an email at <a style="color:#9293bc; font-weight: normal; text-indent: 0.2em;" href="mailto:hackverse@nitk.edu.in" target="_blank">hackverse@nitk.edu.in</a></p>
