--- a/index.html
+++ b/index.html
@@ -589,7 +589,7 @@
                             <a target="_blank" rel="noopener noreferrer" href="https://rosenfeldmedia.com/"><img src="img/sponsors-img/rosenfeld.png" alt="Zubi.io"></a>
                         </div>
                         <div class="single-sponsor wow fadeInUp" data-wow-delay="300ms">
-                            <a target="_blank" rel="noopener noreferrer" href="https://dev.to/"><img style="max-height: 110px;max-width: 50%;" src="img/sponsors-img/dev.png" alt="DEV"></a>
+                            <a target="_blank" rel="noopener noreferrer" href="https://dev.to/"><img src="img/sponsors-img/dev.png" alt="DEV"></a>
                         </div>
                     </div>
                     <div id="desktop">
