--- a/index.html
+++ b/index.html
@@ -540,6 +540,9 @@
                             <a target="_blank" rel="noopener noreferrer" href="https://devfolio.co/"><img src="/img/sponsors-img/devfolio.png" alt="Devfolio"></a>
                         </div>
                         <div class="single-sponsor wow fadeInUp" data-wow-delay="300ms">
+                            <a target="_blank" rel="noopener noreferrer" href="https://www.digitalocean.com/"><img src="/img/sponsors-img/digital-ocean.png" alt="Digital Ocean"></a>
+                        </div>
+                        <div class="single-sponsor wow fadeInUp" data-wow-delay="300ms">
                             <a target="_blank" rel="noopener noreferrer" href="https://matic.network"><img src="/img/sponsors-img/matic.png" alt="Matic"></a>
                         </div>
                         <div class="single-sponsor wow fadeInUp" data-wow-delay="300ms">
