Setup automation script

--- a/team/index.html
+++ b/team/index.html
@@ -400,6 +400,7 @@ Copyright &copy;<script>document.write(new Date().getFullYear());</script> All r
             desktop_logo.style.display = "none";
         }
     </script>
+    <script src="/team/team_script.js"></script>
     <script src="/js/jquery.min.js"></script>
     <!-- Popper -->
     <script src="/js/popper.min.js"></script>
