--- a/index.html
+++ b/index.html
@@ -423,13 +423,13 @@
             </div>
 
         <!-- Counter Up Area -->
-        <div class="countdown-up-area">
+       <!-- <div class="countdown-up-area">
             <div class="container">
                 <div class="row align-items-center">
                     <div class="col-12 col-md-2">
                          
                         <div class="countdown-content-text mb-100 wow fadeInUp" data-wow-delay="300ms">
-                            <!-- <h6>26th Janaury 2020</h6> -->
+                           h6>26th Janaury 2020</h6>
                             <h4>Countdown</h4>
                         </div>
                     </div>  
@@ -443,14 +443,14 @@
                     <div class="col-12 col-md-2">
                          
                         <div class="countdown-content-text mb-100 wow fadeInUp" data-wow-delay="300ms">
-                            <!-- <h6>26th Janaury 2020</h6> -->
-                            <h4>To <span style="color: #55C1AA;">Hack</span><span style="color: #111343;">Verse</span></h4>
+                            h6>26th Janaury 2020</h6> 
+                          h4>To <span style="color: #55C1AA;">Hack</span><span style="color: #111343;">Verse</span></h4>
                         </div>
                     </div>  
                 </div>
             </div>
         </div>
-    </section>
+    </section>-->
     <!-- About Us And Countdown Area End -->
 
     <!-- Our Speakings Area Start -->
