--- a/index.html
+++ b/index.html
@@ -510,8 +510,8 @@
                     </div>
                 </div>
             </div>
-        </div>
-    </section> -->
+        </div> -->
+    </section> 
     
     <!-- Our Speakings Area End -->
 
